--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Albertosarus Dossier</title>
   </head>
   <body>
-    <p>motherfucker</p>
+    <main>
+      <h1><strong>THE MUTHAFUCKIN' ALBERTOSARUS</strong></h1>
+    </main>
   </body>
 </html>
