--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Albertosarus Dossier</title>
   </head>
   <body>
     <main>
-      <h1><strong>THE MUTHAFUCKIN' ALBERTOSARUS</strong></h1>
+      <section>
+        <h1>THE MUTHAFUCKIN ALBERTOSAURS</h1>
+        <img src="albert-home-page.jpg" alt="That's an Albertosaurus" />
+      </section>
     </main>
   </body>
 </html>
