--- a/index.html
+++ b/index.html
@@ -7,11 +7,22 @@
     <title>Albertosarus Dossier</title>
   </head>
   <body>
-    <main>
+    <main class="flex-container">
       <section>
-        <h1>THE MUTHAFUCKIN ALBERTOSAURS</h1>
-        <img src="albert-home-page.jpg" alt="That's an Albertosaurus" />
+        <center>
+          <h1>THE MUTHAFUCKIN ALBERTOSAURS</h1>
+          <img src="albert-home-page.jpg" alt="That's an Albertosaurus" width="600px" />
+        </center>
       </section>
+      <section class="hero">
+        <article>
+            <img src="albert-species.jpg" alt="Life" width="450px">
+            <h2>Life and Time Period</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta itaque, consequatur, modi deleniti
+                consectetur nobis tenetur veritatis iste blanditiis nisi laudantium quae excepturi necessitatibus
+                facere numquam fugit possimus sint dignissimos!</p>
+        </article>
+    </section>
     </main>
   </body>
 </html>
