--- a/indextest.html
+++ b/indextest.html
@@ -14,11 +14,12 @@
         <section class="row thirds cards">
             <article>
                 <img src="img/hurston.png" alt="Placeeholder">
-                <h2>Headline 1</h2>
+                <h2>Life and Habitat</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta itaque, consequatur, modi deleniti
                     consectetur nobis tenetur veritatis iste blanditiis nisi laudantium quae excepturi necessitatibus
                     facere numquam fugit possimus sint dignissimos!</p>
             </article>
+            </section>
     </main>
 </body>
 
