--- a/index.html
+++ b/index.html
@@ -10,19 +10,47 @@
     <main class="flex-container">
       <section>
         <center>
-          <h1>THE MUTHAFUCKIN ALBERTOSAURS</h1>
-          <img src="albert-home-page.jpg" alt="That's an Albertosaurus" width="600px" />
+          <h1>THE ALBERTOSAURS</h1>
+          <img src="albert-home-page.jpg" alt="That's an Albertosaurus" width="550px" />
         </center>
       </section>
-      <section class="hero">
+      <section class="flex-container">
         <article>
-            <img src="albert-species.jpg" alt="Life" width="450px">
+
+            <div class="minecraft"> <img src="albert-species.jpg" alt="Life" width="450px"> </div>
+             <div class="hero">
+
             <h2>Life and Time Period</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta itaque, consequatur, modi deleniti
                 consectetur nobis tenetur veritatis iste blanditiis nisi laudantium quae excepturi necessitatibus
                 facere numquam fugit possimus sint dignissimos!</p>
+              </div> 
+
         </article>
     </section>
+    <section class="flex-container">
+      <article>
+           <div class="hero2">
+
+          <h2>Life and Time Period</h2>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta itaque, consequatur, modi deleniti
+              consectetur nobis tenetur veritatis iste blanditiis nisi laudantium quae excepturi necessitatibus
+              facere numquam fugit possimus sint dignissimos!</p>
+            </div> 
+          <div class="minecraft2"> <img src="albert-species.jpg" alt="Life" width="450px"> </div>
+      </article>
+  </section>
+  <section class="flex-container">
+    <article>
+        <div class="minecraft"> <img src="har.png" alt="Life" width="450px"> </div>
+         <div class="hero">
+        <h2>The Bite of 87</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta itaque, consequatur, modi deleniti
+            consectetur nobis tenetur veritatis iste blanditiis nisi laudantium quae excepturi necessitatibus
+            facere numquam fugit possimus sint dignissimos!</p>
+          </div> 
+    </article>
+</section>
     </main>
   </body>
 </html>
