--- a/index.html
+++ b/index.html
@@ -1,56 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <title>Albertosarus Dossier</title>
-  </head>
-  <body>
-    <main class="flex-container">
-      <section>
-        <center>
-          <h1>THE ALBERTOSAURS</h1>
-          <img src="albert-home-page.jpg" alt="That's an Albertosaurus" width="550px" />
-        </center>
-      </section>
-      <section class="flex-container">
-        <article>
 
-            <div class="minecraft"> <img src="albert-species.jpg" alt="Life" width="450px"> </div>
-             <div class="hero">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="styles.css" />
+  <title>Albertosarus Dossier</title>
+</head>
 
-            <h2>Life and Time Period</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta itaque, consequatur, modi deleniti
-                consectetur nobis tenetur veritatis iste blanditiis nisi laudantium quae excepturi necessitatibus
-                facere numquam fugit possimus sint dignissimos!</p>
-              </div> 
-
-        </article>
+<body>
+  <main class="flex-container">
+    <section>
+      <center>
+        <h1>THE ALBERTOSAURUS</h1>
+        <img src="albert-home-page.jpg" alt="That's an Albertosaurus" width="550px" />
+        <div class="imgonnacry">
+          <p>
+            The Albertosaurus thrived in the Late Cretaceous Period, which was nearly 70-74 million years ago. This era
+            introduced a variety of dinosaurs into the world, that included the Albertosaurus, although it’s lifespan
+            was short lived, it was a ferocious apex predator, easily dominating its ecosystem.
+          </p>
+        </div>
+      </center>
     </section>
     <section class="flex-container">
       <article>
-           <div class="hero2">
 
-          <h2>Life and Time Period</h2>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta itaque, consequatur, modi deleniti
-              consectetur nobis tenetur veritatis iste blanditiis nisi laudantium quae excepturi necessitatibus
-              facere numquam fugit possimus sint dignissimos!</p>
-            </div> 
-          <div class="minecraft2"> <img src="albert-species.jpg" alt="Life" width="450px"> </div>
+        <div class="minecraft"> <img src="joseph.png" alt="Life" width="425px"> </div>
+        <div class="hero">
+
+          <h2>Joseph B. Tyrell</h2>
+          <p>The Albertosaurus’ remains were first ever discovered by a 25 year old man named, Joseph B. Tyrrell. On
+            June 9th of 1884, he was actually on an expedition on the search of coal in the Horseshoe Canyon Formation
+            of the Red Deer River in Canada.</p>
+        </div>
+
       </article>
+    </section>
+    <section class="flex-container">
+      <article>
+        <div class="hero2">
+
+          <h2>Life and Behavior</h2>
+          <p>The life of the Albertosaurus would be considered a short one, only to have lived to about 14 years or
+            older. It was believed by scientists to have had a high mortality rate as they grew older, this was possibly
+            due to their high physiological demands in the growing phase. Since their remains have been found within
+            close proximity to one another, it was believed that they had what is considered “pack behavior.” They were
+            also the apex predator in their entire ecosystem.</p>
+        </div>
+        <div class="minecraft2"> <img src="albert-species.jpg" alt="Life" width="550px"> </div>
+      </article>
+    </section>
+    <section class="flex-container">
+      <article>
+
+        <div class="minecraft"> <img src="albert-skelly.webp" alt="Life" width="500px"> </div>
+        <div class="hero">
+
+          <h2>Fossils and Size</h2>
+          <p>The Albertosaurus is noted to be at least 8 to 9 meters in length (26-30 feet). Although their size was
+            large in comparison to an average human, they were very agile and speedy. The remains of the Albertosaurus
+            have been dated to be nearly 73.1 million years old! They were first discovered in the Horseshoe Canyon
+            Formation in 1884.</p>
+        </div>
+
+      </article>
+    </section>
+    <section class="flex-container">
+      <article>
+        <div class="hero2">
+
+          <h2>Food and Habitat</h2>
+          <p>Being a carnivore, the daily diet of the Albertosaurus consisted mainly of Hadrosaurs and other duck-billed
+            dinosaurs.
+            They’re incredible bone structure would help aid them in consuming food, especially when it came to
+            efficiency The Albertosaurus would primarily prefer to live in lush, heavily vegetated semi-tropical
+            environments. Remains having been found in Alberta, Canada in areas that used to be floodplains that
+            supported large varieties of life nearly 70 million years ago</p>
+        </div>
+        <div class="minecraft2"> <img src="jungle.jpg" alt="Life" width="600px"> </div>
+      </article>
+    </section>
+  </main>
+  </article>
   </section>
-  <section class="flex-container">
-    <article>
-        <div class="minecraft"> <img src="har.png" alt="Life" width="450px"> </div>
-         <div class="hero">
-        <h2>The Bite of 87</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta itaque, consequatur, modi deleniti
-            consectetur nobis tenetur veritatis iste blanditiis nisi laudantium quae excepturi necessitatibus
-            facere numquam fugit possimus sint dignissimos!</p>
-          </div> 
-    </article>
-</section>
-    </main>
-  </body>
+</body>
+
 </html>
