--- a/index.html
+++ b/index.html
@@ -81,6 +81,20 @@
         <div class="minecraft2"> <img src="jungle.jpg" alt="Life" width="600px"> </div>
       </article>
     </section>
+    <section class="flex-container">
+      <article>
+
+        <div class="minecraft"> <img src="albert-skelly.webp" alt="Life" width="500px"> </div>
+        <div class="hero">
+
+          <h2>Species</h2>
+          <p>The Albertosaurus Sarcophagus was quite a large tyrannosaur, although smaller than the average T-Rex, was
+            still very volatile. While being relatively similar to the T-Rex, the Albertosaurus differed form their
+            popular counterpart. They belonged to a subfamily of Albertosaurinae along with the Gorgosaurus.</p>
+        </div>
+
+      </article>
+    </section>
   </main>
   </article>
   </section>
