adding the fuinal touches

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <main class="flex-container">
     <section>
       <center>
-        <h1>THE ALBERTOSAURUS</h1>
+        <h1><strong>THE ALBERTOSAURUS</strong></h1>
         <img src="albert-home-page.jpg" alt="That's an Albertosaurus" width="550px" />
         <div class="imgonnacry">
           <p>
@@ -84,20 +84,47 @@
     <section class="flex-container">
       <article>
 
-        <div class="minecraft"> <img src="albert-skelly.webp" alt="Life" width="500px"> </div>
+        <div class="minecraft"> <img src="species.webp" alt="Life" width="550px"> </div>
         <div class="hero">
 
           <h2>Species</h2>
           <p>The Albertosaurus Sarcophagus was quite a large tyrannosaur, although smaller than the average T-Rex, was
             still very volatile. While being relatively similar to the T-Rex, the Albertosaurus differed form their
-            popular counterpart. They belonged to a subfamily of Albertosaurinae along with the Gorgosaurus.</p>
+            popular counterpart. They belonged to a subfamily of Albertosaurinae along with the Gorgosaurus.These are
+            its
+            classifications:
+            Genus - Albertosaurus
+            Species - sarcophagus
+            Family - Tyrannosauridae
+            Suborder - Albertosaurinae
+            Order - Saurischia
+            Subclass - Dipnotetrapodomorpha
+            Class - Web Development
+            Subphylum - Chordata
+            Phylum - Chordata
+            Kingdom - Animalia</p>
         </div>
 
+      </article>
+    </section>
+    <section class="flex-container">
+      <article>
+        <div class="hero2">
+
+          <h2>Era</h2>
+          <p>The Albertosaurus thrived in the Late Cretaceous Period, which was nearly 70-74 million years ago. This era
+            introduced a variety of dinosaurs into the world, that included the Albertosaurus, although it’s lifespan
+            was short lived, it was a ferocious apex predator, easily dominating its ecosystem.</p>
+        </div>
+        <div class="minecraft2"> <img src="creta-period.jpg" alt="Life" width="600px"> </div>
       </article>
     </section>
   </main>
   </article>
   </section>
+  <footer>
+    what
+  </footer>
 </body>
 
 </html>
