--- a/index.html
+++ b/index.html
@@ -122,9 +122,30 @@
   </main>
   </article>
   </section>
+
   <footer>
-    what
+    <h3>Citations</h3>
+    <ol>
+      <li id="source1">
+        <a href="https://en.wikipedia.org/wiki/Albertosaurus">
+          <em>Wikipedia: Albertosaurus</em></a>
+        <small>Accessed: Oct. 22, 2023</small>
+      </li>
+      <li id="source1">
+        <a
+          href="https://www.fossilera.com/pages/about-albertosaurus#:~:text=rex%20and%20Tarbosaurus%2C%20it%20was,between%202%2D3%20short%20tons.">
+          <em>FossilEra: About The Albertosaurus</em></a>
+        <small>Accessed: Oct. 22, 2023</small>
+      </li>
+      <li id="source1">
+        <a href="https://www.activewild.com/albertosaurus-facts-pictures-information-kids-students-adults/"> Lucas Uher
+          <em>ActiveWild: images</em></a>
+        <small>Accessed: Oct. 22, 2023</small>
+      </li>
+
+    </ol>
   </footer>
+
 </body>
 
 </html>
