--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+  <p class="easteregg">
+    <a href='har.html'>Hey!</a>
+  </p>
   <main class="flex-container">
     <section>
       <center>
