--- a/har.html
+++ b/har.html
@@ -10,18 +10,42 @@
 <section class="flex-container">
     <article>
 
-        <div class="minecraft"> <img src="joseph.png" alt="Life" width="425px"> </div>
+        <div class="minecraft"> <img src="poop.jpeg" alt="harharharharhar" width="425px"> </div>
         <div class="hero">
 
-            <h2>Joseph B. Tyrell</h2>
-            <p>The Albertosaurus’ remains were first ever discovered by a 25 year old man named, Joseph B. Tyrrell. On
-                June 9th of 1884, he was actually on an expedition on the search of coal in the Horseshoe Canyon
-                Formation
-                of the Red Deer River in Canada.</p>
-        </div>
+            <h2>The Poop of 87</h2>
+            <p>The details of this attack and the identity of the animatronic responsible are currently unknown, but it
+                allegedly caused the victim to lose the frontal lobe of their brain. The victim survived the attack.
 
+                The incident contributed to a loss in the company's reputation, which was one of the numerous incidents
+                that resulted in a major drop in business going forward.
+
+                As a result of the incident, the animatronics were no longer allowed to wander around the building
+                during the day; the management decided to limit their free-roaming mode to nighttime, so as to "prevent
+                their servos from locking up.
+            </p>
+        </div>
     </article>
 </section>
+<div class="runaway">
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley">Click to Leave</a>
+</div>
+<div class="realrun">
+    <p>
+    <ul>.</ul>
+    <ul>.</ul>
+    <ul>.</ul>
+    <ul>.</ul>
+    <ul>.</ul>
+    <ul>.</ul>
+    <ul>.</ul>
+    <ul>.</ul>
+    <ul>.</ul>
+    <ul>.</ul>
+    </p>
+    <div class="pic"><img src="victim.png" alt="wassup man" width="450px"></div>
+    <a href="index.html"><---nah jk click here to go back lol</a>
+</div>
 
 <body>
 
